--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,88 @@
-alembic==1.11.1
-aniso8601==9.0.1
-apispec==6.3.0
-attrs==23.1.0
-blinker==1.6.2
-cachelib==0.9.0
-click==8.1.3
-colorama==0.4.6
-Flask==2.3.2
-Flask-Caching==2.0.2
-Flask-CLI==0.4.0
-Flask-Cors==3.0.10
-Flask-JWT-Extended==4.4.4
-Flask-Login==0.6.2
-Flask-Migrate==4.0.4
-flask-restx==1.1.0
-flask-smorest==0.41.0
-Flask-SQLAlchemy==3.0.3
-greenlet==2.0.2
-gunicorn==20.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-Mako==1.2.4
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-packaging==23.1
-passlib==1.7.4
-Pillow==9.5.0
-PyJWT==2.7.0
-pypng==0.20220715.0
-pyrsistent==0.19.3
-python-decouple==3.8
-python-dotenv==0.21.1
-pytz==2023.3
-qrcode==7.4.2
-six==1.16.0
-SQLAlchemy==2.0.14
-typing_extensions==4.5.0
-webargs==8.2.0
-Werkzeug==2.3.6
+# alembic==1.11.1
+# aniso8601==9.0.1
+# apispec==6.3.0
+# attrs==23.1.0
+# blinker==1.6.2
+# cachelib==0.9.0
+# click==8.1.3
+# colorama==0.4.6
+# Flask==2.3.2
+# Flask-Caching==2.0.2
+# Flask-CLI==0.4.0
+# Flask-Cors==3.0.10
+# Flask-JWT-Extended==4.4.4
+# Flask-Login==0.6.2
+# Flask-Migrate==4.0.4
+# flask-restx==1.1.0
+# flask-smorest==0.41.0
+# Flask-SQLAlchemy==3.0.3
+# greenlet==2.0.2
+# gunicorn==20.1.0
+# itsdangerous==2.1.2
+# Jinja2==3.1.2
+# jsonschema==4.17.3
+# Mako==1.2.4
+# MarkupSafe==2.1.2
+# marshmallow==3.19.0
+# packaging==23.1
+# passlib==1.7.4
+# Pillow==9.5.0
+# PyJWT==2.7.0
+# pypng==0.20220715.0
+# pyrsistent==0.19.3
+# python-decouple==3.8
+# python-dotenv==0.21.1
+# pytz==2023.3
+# qrcode==7.4.2
+# six==1.16.0
+# SQLAlchemy==2.0.14
+# typing_extensions==4.5.0
+# webargs==8.2.0
+# Werkzeug==2.3.6
 
 
 
 # For render
 
 
-# alembic
-# aniso8601
-# apispe
-# attrs
-# blinker
-# cachelib
-# click
-# colorama
-# Flask
-# Flask-Caching
-# Flask-CLI
-# Flask-Cors
-# Flask-JWT-Extended
-# Flask-Login
-# Flask-Migrate
-# flask-restx
-# flask-smorest
-# Flask-SQLAlchemy
-# greenlet
-# gunicorn
-# itsdangerous
-# Jinja2
-# jsonschema
-# Mako
-# MarkupSafe
-# marshmallow
-# packaging
-# passlib
-# Pillow
-# PyJWT
-# pypng
-# pyrsistent
-# python-decouple
-# python-dotenv
-# pytz
-# qrcode
-# six
-# SQLAlchemy
-# typing_extensions
-# webargs
-# Werkzeug
+alembic
+aniso8601
+apispe
+attrs
+blinker
+cachelib
+click
+colorama
+Flask
+Flask-Caching
+Flask-CLI
+Flask-Cors
+Flask-JWT-Extended
+Flask-Login
+Flask-Migrate
+flask-restx
+flask-smorest
+Flask-SQLAlchemy
+greenlet
+gunicorn
+itsdangerous
+Jinja2
+jsonschema
+Mako
+MarkupSafe
+marshmallow
+packaging
+passlib
+Pillow
+PyJWT
+pypng
+pyrsistent
+python-decouple
+python-dotenv
+pytz
+qrcode
+six
+SQLAlchemy
+typing_extensions
+webargs
+Werkzeug
